--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "Windows (Sergio Kanno) <sergio.kanno@outlook.com.br>",
   "license": "MIT",
   "dependencies": {
+    "eslint-plugin-prettier": "^5.5.4",
     "next": "^15.5.4",
+    "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -15,6 +17,11 @@
     "build": "rm -rf build && next build && mv ./out ./build",
     "executa": "next .",
     "start": "next start",
-    "lint": "next lint"  
+    "lint": "next lint"
+  },
+  "devDependencies": {
+    "eslint": "^9",
+    "eslint-config-next": "15.5.4",
+    "eslint-config-prettier": "^10.1.8"
   }
 }
