--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Installation
         run: yarn install
+      - name: Run Linter
+        run: yarn lint
       - name: Run Build
         run: yarn build
