--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "next": "^15.5.4",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "vercel": "^25.0.0"
   },
   "scripts": {
     "dev": "next dev",
