--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "eslint-plugin-prettier": "^5.5.4",
     "next": "^15.5.4",
+    "node-fetch": "^3.3.2",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
